# rss-service-rs

./: .env  Cargo.toml  Dockerfile
.github/workflows/: build.yml
migrations/2022-06-08-102513_create_feeds/: up.sql
migrations/2022-06-08-121813_create_posts/: up.sql
migrations/2022-07-05-203239_add_indexes_to_post/: down.sql  up.sql
migrations/2022-07-05-204733_create_webhooks/: up.sql
migrations/2022-07-05-205558_create_webhooks_subscription/: down.sql  up.sql
migrations/2022-07-09-145750_extend_post_url/: down.sql  up.sql
migrations/2022-07-29-134929_add_webhook_ai/: down.sql  up.sql
migrations/2022-07-30-064753_reset_sequence_webhook_subscription/: down.sql  up.sql
src/: controllers.rs  db.rs  err.rs  handlers.rs  http.rs  main.rs  models.rs  rss.rs  schema.rs  util.rs
src/controllers/: feeds.rs  mod.rs  subscriptions.rs  system.rs
src/models/: dto.rs  feed.rs  mod.rs  post.rs  webhook.rs  webhook_subscription.rs
src/models/dto/: webhook_message.rs
