[package]
name = "rss-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
serde = { version="1.0.137", features=["derive"] }
serde_json = "1.0.81"
chrono = { version = "0.4.19", features=["serde"] }
rss = "2.0.1"
dotenv = "0.15.0"
r2d2 = "0.8.9"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
reqwest = { version = "0.11.10" }
